--- a/googleapi/googlemapstyle.css
+++ b/googleapi/googlemapstyle.css
@@ -1,5 +1,20 @@
 #map {
-    width: 100%;
-    height: 600px;
-    background-color: #CCC;
+  width: 100%;
+  height: 600px;
+  background-color: #CCC;
+}
+
+
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
 }
