--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -316,6 +316,14 @@ body {
 
 
 /*Racing map feature image and text overlay styling*/
+.raceHead {
+  margin-top:10px;
+  color:white;
+  text-align:center;
+  margin-bottom:25px;
+}
+
+
 .racingfeature {
   opacity:0.8;
 }
@@ -342,9 +350,13 @@ body {
 
 
 
-/*Horizontal line*/
-.horizontal {
+/*Horizontal lines*/
+.horizontalOne {
   margin-top:70px;
+  border:3px solid black;
+}
+
+.horizontalTwo {
   border:3px solid black;
 }
 
@@ -352,24 +364,30 @@ body {
 
 
 
+/*Start of vote build section*/
+.voteday {
+  color:white;
+  font-size:24px;
+  text-align:center;
+  padding-top:10px;
+  font-family:'Helvetica';
+}
+
 
 /*Ferrari 458 car vote section*/
 .votesection {
-  margin-top:60px;
+  margin-top:35px;
 }
-
 
 .votesquares {
-  margin-top:20px;
+  margin-top:1px;
 }
 
-
-.square458 {
+.squareOne {
   width: 100%;
   height: 480px;
   position: relative;
 }
-
 
 .vote1 {
   z-index: -1;
@@ -379,17 +397,11 @@ body {
   position: absolute;
   width: 100%;
   height:78%;
-
-
 }
-
 
 .italia458 {
   border:6px solid black;
 }
-
-
-
 
 .italiastyle {
   font-size:25px;
@@ -407,16 +419,48 @@ body {
 
 
 
+/*Vote modal styling*/
+.modal {
+  text-align:center;
+}
 
+.modal:before {
+  content:'';
+  display:inline-block;
+  height:100%;
+  vertical-align:middle;
+  margin-right:-4px;
+}
+
+.modal-dialog {
+  display:inline-block;
+  text-align:middle;
+  vertical-align:middle;
+  border:5px solid black;
+}
+
+.modal-body {
+  font-size:20px;
+  font-family:'Helvetica';
+  color:black;
+}
+
+.modal-title {
+  color:black;
+  font-family:'Helvetica';
+}
+
+.modal-footer {
+  text-align:center;
+}
 
 
 /*Nissan GTR car vote section*/
-.gtrsquare {
+.squareTwo {
   width: 100%;
   height: 480px;
   position: relative;
 }
-
 
 .vote2 {
   z-index: -1;
@@ -428,14 +472,11 @@ body {
   height:78%;
 }
 
-
 .r35gtr {
   border:6px solid black;
 
 
 }
-
-
 
 .gtrstyle {
   font-size:25px;
@@ -455,10 +496,15 @@ body {
 
 
 
-
+.topracers {
+  margin-top:40px;
+  text-align:center;
+  color:white;
+  font-family:'Helvetica';
+}
 
 .scoreboard {
-  margin-top:100px;
+  margin-top:30px;
 }
 
 
@@ -466,10 +512,6 @@ body {
   border:5px solid black;
 }
 
-
-.lbm4 {
-  border:5px solid black;
-}
 
 
 
@@ -486,7 +528,6 @@ body {
   margin-top:80px;
   font-family:'Open Sans';
 }
-
 
 .socialicons {
   margin-top:50px;
