--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -316,14 +316,6 @@ body {
 
 
 /*Racing map feature image and text overlay styling*/
-.raceHead {
-  margin-top:10px;
-  color:white;
-  text-align:center;
-  margin-bottom:25px;
-}
-
-
 .racingfeature {
   opacity:0.8;
 }
@@ -357,9 +349,9 @@ body {
 }
 
 .horizontalTwo {
+  margin-top:50px;
   border:3px solid black;
 }
-
 
 
 
@@ -385,7 +377,7 @@ body {
 
 .squareOne {
   width: 100%;
-  height: 480px;
+  height: 370px;
   position: relative;
 }
 
@@ -416,6 +408,47 @@ body {
   font-family:'Helvetica';
   font-weight:300;
 }
+
+
+
+
+/*Nissan GTR car vote section*/
+.squareTwo {
+  width: 100%;
+  height: 370px;
+  position: relative;
+}
+
+.vote2 {
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
+  position: absolute;
+  width: 100%;
+  height:78%;
+}
+
+
+.r35gtr {
+  border:6px solid black;
+}
+
+.gtrstyle {
+  font-size:25px;
+  background-color: rgba(15,15,15,0.75);
+  color:#fff;
+  bottom: 0px;
+  text-align: center;
+  padding: 10px 5px 10px 5px;
+  width:100%;
+  border-left:none;
+  border-right:none;
+  font-family:'Helvetica';
+  font-weight:300;
+}
+
+
 
 
 
@@ -455,52 +488,44 @@ body {
 }
 
 
-/*Nissan GTR car vote section*/
-.squareTwo {
-  width: 100%;
-  height: 480px;
-  position: relative;
+
+
+
+
+
+
+
+/*Race map header styling*/
+.raceHead {
+  margin-top:28px;
+  color:white;
+  text-align:center;
+  font-size:27px;
 }
 
-.vote2 {
-  z-index: -1;
-  top: 0;
-  left: 0;
-  background-size: 100% auto;
-  position: absolute;
-  width: 100%;
-  height:78%;
+
+#map {
+  margin-top:30px;
 }
 
-.r35gtr {
-  border:6px solid black;
 
-
-}
-
-.gtrstyle {
-  font-size:25px;
-  background-color: rgba(15,15,15,0.75);
-  color:#fff;
-  bottom: 0px;
-  text-align: center;
-  padding: 10px 5px 10px 5px;
-  width:100%;
-  border-left:none;
-  border-right:none;
-  font-family:'Helvetica';
-  font-weight:300;
+#floating-panel {
+  margin-top:20px;
+  margin-right:20px;
 }
 
 
 
 
 
+
+/*Top racer scoreboard section styling*/
 .topracers {
   margin-top:40px;
   text-align:center;
   color:white;
   font-family:'Helvetica';
+  font-size:30px;
 }
 
 .scoreboard {
