--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -367,92 +367,192 @@ body {
 
 
 /*Ferrari 458 car vote section*/
+.italia458 {
+  border:6px solid black;
+}
+
+
 .votesection {
   margin-top:35px;
 }
+
 
 .votesquares {
   margin-top:1px;
 }
 
+
 .squareOne {
   width: 100%;
-  height: 370px;
+  height: 100%;
   position: relative;
 }
 
 
-
-
 .vote1 {
-  z-index: -1;
-  top: 0;
-  left: 0;
-  background-size: 100% auto;
-  position: absolute;
   width: 100%;
-  height:78%;
-}
-
-.italia458 {
-  border:6px solid black;
-}
-
-.italia458 {
-  color:white;
-}
-
-.italiastyle {
-  font-size:25px;
-  background-color: rgba(15,15,15,0.75);
-  color:#fff;
-  bottom: 0px;
+  height: 78%;
+  overflow: hidden;
+  position: relative;
   text-align: center;
-  padding: 10px 5px 10px 5px;
+  background: black;
+  top:0;
+  left:0;
+  background-size:100% auto;
+}
+
+
+.vote1 .italiastyle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  bottom:20px;
+  left: 0;
+
+}
+
+
+.vote1 img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 100%;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+
+.vote1:hover img {
+  opacity: 0.4;
+}
+
+
+.vote1 h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 18px 50px 13px 50px;
+  background-color: rgba(15,15,15,0.85);
   width:100%;
+  font-size:25px;
+  bottom:0px;
+  font-weight:300;
+  font-family:'Helvetica';
   border-left:none;
   border-right:none;
-  font-family:'Helvetica';
-  font-weight:300;
 }
+
+
+.vote1 p {
+  color: #FFF;
+  opacity: 0;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(100%,0,0);
+}
+
+
+.vote1:hover p {
+  opacity: 1;
+  transform: translate3d(0,0,0);
+}
+
+.voteitalia {
+  padding-top:70px;
+  font-size:30px;
+  font-family:'Helvetica';
+}
+
+
 
 
 
 
 /*Nissan GTR car vote section*/
-.squareTwo {
-  width: 100%;
-  height: 370px;
-  position: relative;
-}
-
-.vote2 {
-  z-index: -1;
-  top: 0;
-  left: 0;
-  background-size: 100% auto;
-  position: absolute;
-  width: 100%;
-  height:78%;
-}
-
-
 .r35gtr {
   border:6px solid black;
 }
 
-.gtrstyle {
-  font-size:25px;
-  background-color: rgba(15,15,15,0.75);
-  color:#fff;
-  bottom: 0px;
+
+.squareTwo {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+
+.vote2 {
+  width: 100%;
+  height: 78%;
+  overflow: hidden;
+  position: relative;
   text-align: center;
-  padding: 10px 5px 10px 5px;
+  background: black;
+  top:0;
+  left:0;
+  background-size:100% auto;
+}
+
+
+.vote2 .gtrstyle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  bottom:20px;
+  left: 0;
+}
+
+
+.vote2 img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 100%;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+
+.vote2:hover img {
+  opacity: 0.4;
+}
+
+
+.vote2 h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 18px 50px 13px 50px;
+  background-color: rgba(15,15,15,0.50);
   width:100%;
+  font-size:25px;
+  bottom:0px;
+  font-weight:300;
+  font-family:'Helvetica';
   border-left:none;
   border-right:none;
+}
+
+
+.vote2 p {
+  color: #FFF;
+  opacity: 0;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(100%,0,0);
+}
+
+
+.vote2:hover p {
+  opacity: 1;
+  transform: translate3d(0,0,0);
+}
+
+
+.votegtr {
+  padding-top:70px;
   font-family:'Helvetica';
-  font-weight:300;
+  font-size:30px;
 }
 
 
