--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,241 +1,204 @@
 /*Main page background*/
 body {
-  background-color:#242424;
+  background-color: #242424;
 }
 
 /*Main Nav Components*/
 .navbar {
-  background:transparent;
+  background: transparent;
   background-color: rgba(255,255,255,0.5);
-  border:1px solid black;
-  padding:0;
+  border: 1px solid black;
+  padding: 0;
 }
 
 /*streeTRACE logo*/
 .streetlogo {
-  padding-top:2px;
-  padding-left:3px;
+  padding-top: 2px;
+  padding-left: 3px;
 }
 
 /*Nav dropdown spacing*/
 .dropstyle {
-  margin-right:0.1px;
+  margin-right: 0.1px;
 }
 
 /*Dropdown header styling*/
 .dropheads {
-  color:#4f4f4f;
-  font-family:'Open Sans';
-  font-size:19px;
-  font-weight:bold;
-  margin-right:10px;
+  color: #4f4f4f;
+  font-family: 'Open Sans';
+  font-size: 19px;
+  font-weight: bold;
+  margin-right: 10px;
 }
 
 /*Dropdown list styling*/
 .dropliststyle {
-  color:#4f4f4f;
-  font-size:17px;
+  color: #4f4f4f;
+  font-size: 17px;
 }
 
 /*Dropdown list background*/
 .dropbackground {
-  background:transparent;
+  background: transparent;
   background-color: rgba(255,255,255,0.7);
 }
 
-
-
-
-
-
-
-
 /*GTR main page picture*/
 .gtrmain {
-  width:100%;
-  opacity:0.8;
+  width: 100%;
+  opacity: 0.8;
 }
 
 /*GTR image text overlay positioning*/
 .wrap {
-  margin:auto;
-  position:relative;
+  margin: auto;
+  position: relative;
 }
 
 .wrap img {
-  width:100%;
-  height:auto;
-  border:1px solid #000;
+  width: 100%;
+  height: auto;
+  border: 1px solid #000;
 }
 
 .caption {
-  position:absolute;
-  top:10px;
-  left:1px;
-  right:2;
-  bottom:0px;
-  overflow:hidden;
+  position: absolute;
+  top: 10px;
+  left: 1px;
+  right: 2;
+  bottom: 0px;
+  overflow: hidden;
 }
 
 .caption-inner {
-  display:table;
-  width:100%;
-  height:100%;
+  display: table;
+  width: 100%;
+  height: 100%;
 }
 
 .caption-content {
-  display:table-cell;
-  vertical-align:middle;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .caption-content h1 {
-  margin:430px 0px 0px 0px;
-  background:rgba(255,255,255,0.4);
-  padding:10px;
-
+  margin: 430px 0px 0px 0px;
+  background: rgba(255,255,255,0.4);
+  padding: 10px;
 }
-
-
 
 /*Nextlevel image text overlay styling*/
 .nextlevel {
-  font-weight:bold;
-  color:#242424;
-  font-size:43px;
-  font-family:'Helvetica';
+  color: #242424;
+  font-size: 43px;
+  font-family: 'Helvetica';
+  font-weight: bold;
 }
 
 /*Nextlevel image text overlay "racing" styling*/
 .racing {
-  color:#ED1C26;
-  font-style:italic;
-  font-weight:1000;
+  color: #ED1C26;
+  font-style: italic;
+  font-weight: 1000;
 }
-
-
 
 /*Sponsor logo positioning*/
 .sponsors1 {
-  margin-top:50px;
+  margin-top: 50px;
 }
-
 
 .sponsors2 {
-  margin-top:50px;
+  margin-top: 50px;
 }
-
-
-
-
 
 /*Speedhunters logo styling*/
 .speedhunters {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .speedhunters:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
 
 /*Motorhead logo styling*/
 .motorhead {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .motorhead:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
 
 /*Fi-exhaust logo styling*/
 .fiexhaust {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .fiexhaust:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
 
 /*Formula drift logo styling*/
 .formuladrift {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .formuladrift:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
 
 /*Forgiato logo styling*/
 .forgiato {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .forgiato:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
 
 /*Skyforged logo styling*/
 .skyforged {
-  border:2px solid #4f4f4f;
-  border-top:none;
-  border-left:none;
-  border-right:none;
+  border: 2px solid #4f4f4f;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 .skyforged:hover {
-  border-color:#ED1C26;
+  border-color: #ED1C26;
 }
-
-
-
-
-
-
-
-
 
 /*Website feature images section*/
 .features {
-  margin-top:90px;
-  font-size:17px;
-  font-family:'Open Sans';
+  font-family: 'Open Sans';
+  font-size: 17px;
+  margin-top: 90px;
 }
-
-
 
 /*Car builds feature image and text overlay styling*/
 .subiefeature {
-  opacity:0.9;
+  opacity: 0.9;
 }
 
 .buildsfeature {
-  position:relative;
-  border:1px solid black;
-  background-color:black;
+  position: relative;
+  border: 1px solid black;
+  background-color: black;
 }
 
 .buildsfeature:hover {
@@ -243,30 +206,24 @@ body {
 }
 
 .buildsheader {
+  color: #fff;
+  text-align: center;
   position: absolute;
   background-color: rgba(15, 15, 15, 0.93);
-  color: #fff;
   bottom: 0px;
-  text-align: center;
+  width: 100%;
   padding: 10px 5px 10px 5px;
-  width:100%;
 }
-
-
-
-
-
-
 
 /*Car parts feature image and text overlay styling*/
 .enginefeature {
-  opacity:0.9;
+  opacity: 0.9;
 }
 
 .partsfeature {
-  position:relative;
-  border:1px solid black;
-  background-color:black;
+  position: relative;
+  border: 1px solid black;
+  background-color: black;
 }
 
 .partsfeature:hover {
@@ -274,27 +231,24 @@ body {
 }
 
 .partsheader {
+  color: #fff;
+  text-align: center;
   position: absolute;
   background-color: rgba(15, 15, 15, 0.93);
-  color: #fff;
   bottom: 0px;
-  text-align: center;
   padding: 10px 5px 10px 5px;
-  width:100%;
+  width: 100%;
 }
-
-
-
 
 /*Guides feature image and text overlay styling*/
 .stickfeature {
-  opacity:0.9;
+  opacity :0.9;
 }
 
 .guidesfeature {
-  position:relative;
-  border:1px solid black;
-  background-color:black;
+  position: relative;
+  border: 1px solid black;
+  background-color: black;
 }
 
 .guidesfeature:hover {
@@ -308,22 +262,18 @@ body {
   bottom: 0px;
   text-align: center;
   padding: 10px 5px 10px 5px;
-  width:100%;
+  width: 100%;
 }
-
-
-
-
 
 /*Racing map feature image and text overlay styling*/
 .racingfeature {
-  opacity:0.8;
+  opacity: 0.8;
 }
 
 .mapsfeature {
-  position:relative;
-  border:1px solid black;
-  background-color:black;
+  position: relative;
+  border: 1px solid black;
+  background-color: black;
 }
 
 .mapsfeature:hover {
@@ -331,63 +281,50 @@ body {
 }
 
 .mapsheader {
+  color: #fff;
+  text-align: center;
   position: absolute;
   background-color: rgba(15, 15, 15, 0.93);
-  color: #fff;
+  width: 100%;
   bottom: 0px;
-  text-align: center;
   padding: 10px 5px 10px 5px;
-  width:100%;
 }
-
-
 
 /*Horizontal lines*/
 .horizontalOne {
-  margin-top:70px;
-  border:3px solid black;
+  border: 3px solid black;
+  margin-top: 70px;
+ 
 }
 
 .horizontalTwo {
-  margin-top:50px;
-  border:3px solid black;
+  border: 3px solid black;
+  margin-top: 50px;
 }
-
-
-
 
 /*Start of vote build section*/
 .voteday {
-  color:white;
-  font-size:24px;
-  text-align:center;
-  padding-top:10px;
-  font-family:'Helvetica';
+  padding-top: 10px;
 }
-
 
 /*Ferrari 458 car vote section*/
 .italia458 {
-  border:6px solid black;
+  border: 6px solid black;
 }
-
 
 .votesection {
-  margin-top:35px;
+  margin-top: 35px;
 }
-
 
 .votesquares {
-  margin-top:1px;
+  margin-top: 1px;
 }
-
 
 .squareOne {
   width: 100%;
   height: 100%;
   position: relative;
 }
-
 
 .vote1 {
   width: 100%;
@@ -396,22 +333,19 @@ body {
   position: relative;
   text-align: center;
   background: black;
-  top:0;
-  left:0;
-  background-size:100% auto;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
 }
-
 
 .vote1 .italiastyle {
   width: 100%;
   height: 100%;
   position: absolute;
   overflow: hidden;
-  bottom:20px;
+  bottom: 20px;
   left: 0;
-
 }
-
 
 .vote1 img {
   display: block;
@@ -421,11 +355,9 @@ body {
   transition: opacity 0.35s, transform 0.35s;
 }
 
-
 .vote1:hover img {
   opacity: 0.4;
 }
-
 
 .vote1 h2 {
   color: #fff;
@@ -434,52 +366,44 @@ body {
   overflow: hidden;
   padding: 18px 50px 13px 50px;
   background-color: rgba(15,15,15,0.85);
-  width:100%;
-  font-size:25px;
-  bottom:0px;
-  font-weight:300;
-  font-family:'Helvetica';
-  border-left:none;
-  border-right:none;
+  width: 100%;
+  font-size: 22px;
+  bottom: 0px;
+  font-weight: 300;
+  font-family: 'Helvetica';
+  border-left: none;
+  border-right: none;
 }
 
-
 .vote1 p {
-  color: #FFF;
+  color: green;
   opacity: 0;
   transition: opacity 0.35s, transform 0.35s;
   transform: translate3d(100%,0,0);
 }
 
-
 .vote1:hover p {
   opacity: 1;
   transform: translate3d(0,0,0);
+  color: green;
 }
 
 .voteitalia {
-  padding-top:70px;
-  font-size:30px;
-  font-family:'Helvetica';
+  font-size: 30px;
+  font-family: 'Helvetica';
+  padding-top: 100px;
 }
-
-
-
-
-
 
 /*Nissan GTR car vote section*/
 .r35gtr {
-  border:6px solid black;
+  border: 6px solid black;
 }
-
 
 .squareTwo {
   width: 100%;
   height: 100%;
   position: relative;
 }
-
 
 .vote2 {
   width: 100%;
@@ -488,21 +412,19 @@ body {
   position: relative;
   text-align: center;
   background: black;
-  top:0;
-  left:0;
-  background-size:100% auto;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
 }
-
 
 .vote2 .gtrstyle {
   width: 100%;
   height: 100%;
   position: absolute;
   overflow: hidden;
-  bottom:20px;
+  bottom: 20px;
   left: 0;
 }
-
 
 .vote2 img {
   display: block;
@@ -512,262 +434,390 @@ body {
   transition: opacity 0.35s, transform 0.35s;
 }
 
-
 .vote2:hover img {
   opacity: 0.4;
 }
-
 
 .vote2 h2 {
   color: #fff;
   text-align: center;
   font-size: 17px;
   overflow: hidden;
-  padding: 18px 50px 13px 50px;
+  padding: 15px 50px 13px 50px;
   background-color: rgba(15,15,15,0.50);
-  width:100%;
-  font-size:25px;
-  bottom:0px;
-  font-weight:300;
-  font-family:'Helvetica';
-  border-left:none;
-  border-right:none;
+  width: 100%;
+  font-size: 22px;
+  bottom: 0px;
+  font-weight: 300;
+  font-family: 'Helvetica';
+  border-left: none;
+  border-right: none;
 }
 
-
 .vote2 p {
-  color: #FFF;
-  opacity: 0;
+  color: green;
+  opacity: 1;
   transition: opacity 0.35s, transform 0.35s;
   transform: translate3d(100%,0,0);
 }
-
 
 .vote2:hover p {
   opacity: 1;
   transform: translate3d(0,0,0);
 }
 
-
 .votegtr {
-  padding-top:70px;
-  font-family:'Helvetica';
-  font-size:30px;
+  font-size: 30px;
+  font-family: 'Helvetica';
+  padding-top: 100px;
 }
-
-
-
-
 
 /*Vote modal styling*/
 .modal {
-  text-align:center;
+  text-align: center;
 }
 
 .modal:before {
-  content:'';
-  display:inline-block;
-  height:100%;
-  vertical-align:middle;
-  margin-right:-4px;
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
 }
 
 .modal-dialog {
-  display:inline-block;
-  text-align:middle;
-  vertical-align:middle;
-  border:5px solid black;
+  border: 5px solid black;
+  display: inline-block;
+  text-align: middle;
+  vertical-align: middle;
 }
 
 .modal-body {
-  font-size:20px;
-  font-family:'Helvetica';
-  color:black;
-}
-
-.modal-title {
-  color:black;
-  font-family:'Helvetica';
+  font-size: 15px;
+  font-family: 'Helvetica';
+  color: black;
 }
 
 .modal-footer {
-  text-align:center;
+  text-align: center;
 }
 
-
-
-
-
-
-
-
+.btn-default {
+  font-size: 13px;
+  border: 1px solid black;
+}
 
 /*Race map header styling*/
 .raceHead {
-  margin-top:28px;
-  color:white;
-  text-align:center;
-  font-size:27px;
-  font-family:'Helvetica';
+  color: white;
+  font-size: 27px;
+  font-family: 'Helvetica';
+  text-align: center;
+  margin-top: 28px;
 }
-
 
 #map {
-  margin-top:30px;
-  border:1px solid black;
+  border: 15px solid black;
+  margin-top: 30px;
 }
-
 
 #floating-panel {
-  margin-top:20px;
-  margin-right:20px;
+  margin-top: 35px;
+  margin-right: 90px;
 }
 
-
-
-
-
-
 /*Top racer scoreboard section styling*/
+.topScores {
+  padding-bottom:20px;
+}
+
 .topracers {
-  margin-top:40px;
-  text-align:center;
-  color:white;
-  font-family:'Helvetica';
-  font-size:30px;
+  margin-top: 20px;
 }
 
 .scoreboard {
-  margin-top:20px;
+  margin-top: 20px;
 }
 
-
-.lbg37 {
-  border:5px solid black;
+/*G37 top racer section*/
+.statsOne {
+  width: 100%;
+  height: 78%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  background: black;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
+  border: 9px solid black;
 }
 
-
-
-
-
-
-
-
-.box {  
-  background-image:url('../images/libertywalkg37.jpg');
-  overflow:hidden;
-  position:relative;
+.statsOne .g37Style {
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  overflow: hidden;
+  bottom: 44px;
+  left: 0;
 }
 
-
-
-.overlay {  
-  background:rgba(0,0,0,.75);
-  padding:50px 0px;
-  opacity:0;
+.statsOne img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 100%;
+  opacity: 1;
+  transition: opacity 0.35s, transform 0.35s;
 }
 
+.statsOne:hover img {
+  opacity: 0.6;
+}
 
-.box:hover .overlay {
+.statsOne h3 {
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 8px 50px 8px 50px;
+  background-color: rgba(15,15,15,0.85);
+  width: 100%;
+  font-size: 19px;
+  bottom: 0px;
+  font-weight: 300;
+  font-family: 'Helvetica';
+  border-left: none;
+  border-right: none;
+}
+
+.statsOne p {
+  color: #FFF;
+  opacity: 0;
+  text-align: left;
+  padding-top: 10px;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(100%,0,0);
+}
+
+.statsOne:hover p {
+  opacity: 10;
+  transform: translate3d(0,0,0);
+}
+
+.viewOne {
+  font-size: 20px;
+  font-family: 'Helvetica';
+}
+
+/*M4 top racer section*/
+.statsTwo {
+  width: 100%;
+  height: 78%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  background: black;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
+  border: 9px solid black;
+}
+
+.statsTwo .m4Style {
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  overflow: hidden;
+  bottom: 44px;
+  left: 0;
+}
+
+.statsTwo img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 100%;
+  opacity: 0.8;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+.statsTwo:hover img {
+  opacity: 0.5;
+}
+
+.statsTwo h3 {
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 8px 50px 8px 50px;
+  background-color: rgba(15,15,15,0.85);
+  width: 100%;
+  font-size: 19px;
+  bottom: 0px;
+  font-weight: 300;
+  font-family: 'Helvetica';
+  border-left: none;
+  border-right: none;
+}
+
+.statsTwo p {
+  color: #FFF;
+  opacity: 0;
+  text-align: left;
+  padding-top: 10px;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(100%,0,0);
+}
+
+.statsTwo:hover p {
+  opacity: 10;
+  transform: translate3d(0,0,0);
+}
+
+.viewTwo {
+  font-size: 20px;
+  font-family: 'Helvetica';
+}
+
+/*Porsche top racer section*/
+.statsThree {
+  width: 100%;
+  height: 78%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  background: black;
+  top: 0;
+  left: 0;
+  background-size: 100% auto;
+  border: 9px solid black;
+}
+
+.statsThree .porscheStyle {
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  overflow: hidden;
+  bottom: 44px;
+  left: 0;
+}
+
+.statsThree img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: 100%;
   opacity:1;
+  transition: opacity 0.35s, transform 0.35s;
 }
 
-
-.plus { 
-  font-family:'Helvetica';
-  font-weight:900;
-  color:rgba(255,255,255,.85);
-  font-size:17px;
-  text-align:center;
-  color:#fff;
-  padding:10px 5px 10px 5px;
-  width:100%;
+.statsThree:hover img {
+  opacity: 0.6;
 }
 
+.statsThree h3 {
+  color: #fff;
+  text-align: center;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 8px 50px 8px 50px;
+  background-color: rgba(15,15,15,0.85);
+  width: 100%;
+  font-size: 19px;
+  bottom: 0px;
+  font-weight: 300;
+  font-family: 'Helvetica';
+  border-left: none;
+  border-right: none;
+}
 
+.statsThree p {
+  color: #FFF;
+  opacity: 0;
+  text-align: left;
+  padding-top: 10px;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: translate3d(100%,0,0);
+}
 
+.statsThree:hover p {
+  opacity: 10;
+  transform: translate3d(0,0,0);
+}
 
+.viewThree {
+  font-size: 20px;
+  font-family: 'Helvetica';
+}
 
+/*Social media section*/
+.socialmedia {
+  margin-top:40px;
+}
 
+.followus {
+  margin-top: 20px;
+}
 
+.socialicons {
+  margin-top: 50px;
+}
 
+/*Facebook icon section*/
+.fbicon {
+  color: #ED1C26;
+  font-size: 80px;
+}
 
+.fbheader {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  color: white;
+}
 
-   /*Social media section*/
-  .followus {
-    color:white;
-    font-size:28px;
-    text-align:center;
-    margin-top:80px;
-    font-family:'Open Sans';
-  }
+.fbtext {
+  font-size: 15px;
+  font-family: 'Open Sans';
+  color: white;
+}
 
-  .socialicons {
-    margin-top:50px;
+/*Youtube icon section*/
+.tubeicon {
+  color: #ED1C26;
+  font-size: 80px;
+}
 
-  }
+.tubeheader {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  color: white;
+}
 
+.tubetext {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  color: white;
+}
 
+/*Instagram icon section*/
+.instaicon {
+  color: #ED1C26;
+  font-size: 80px;
+}
 
-  /*Facebook icon section*/
-  .fbicon {
-    color:#ED1C26;
-    font-size:80px;
+.instaheader {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  color: white;
+}
 
-  }
-
-  .fbheader {
-    color:white;
-    font-family:'Open Sans';
-    font-size:25px;
-  }
-
-  .fbtext {
-    color:white;
-    font-size:15px;
-    font-family:'Open Sans';
-  }
-
-
-
-
-  /*Youtube icon section*/
-  .tubeicon {
-    color:#ED1C26;
-    font-size:80px;
-  }
-
-  .tubeheader {
-    font-family:'Open Sans';
-    font-size:25px;
-    color:white;
-  }
-
-  .tubetext {
-    font-family:'Open Sans';
-    font-size:15px;
-    color:white;
-  }
-
-
-
-  /*Instagram icon section*/
-  .instaicon {
-    color:#ED1C26;
-    font-size:80px;
-  }
-
-  .instaheader {
-    font-family:'Open Sans';
-    font-size:25px;
-    color:white;
-  }
-
-  .instatext {
-    font-family:'Open Sans';
-    font-size:15px;
-    color:white;
-  }
+.instatext {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  color: white;
+}
 
 
 
